# Joy2DroidX-server

./: .env  .gitignore  README.md  pyproject.toml
j2dx/: __init__.py  compatibility_wrapper.py
j2dx/nix/: device.py
j2dx/utils/: tool.py
j2dx/win/: ViGEm.py  __init__.py  device.py  setup.py
