[tool.poetry]
name = "joy2droidx-server"
version = "0.1.0"
description = "Joy 2 Droid X - Server to use Android as a game controller"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "j2dx" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
# Use compatible versions of socketio and engineio
python-socketio = ">=5.0.0,<6.0.0"
python-engineio = ">=4.0.0,<5.0.0"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
qrcode = "^7.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
j2dx = "j2dx:main"

[virtualenvs]
in-project = true
create = true
